--- a/templates/user.html
+++ b/templates/user.html
@@ -44,7 +44,7 @@ body {
     transform:translate(-50%, -50%);
     width:200px;
     height:200px;
-    background:url('استيك/صور/لوقو.png') no-repeat center/contain;
+    background:url('static/images/logo.png') no-repeat center/contain;
     opacity:0.1;
     z-index:1;
 }
@@ -56,7 +56,7 @@ body {
     right:20px;
     width:80px;
     height:80px;
-    background:url('استيك/صور/لوقو.png') no-repeat center/contain;
+    background:url('static/images/logo.png') no-repeat center/contain;
     z-index:2;
 }
 
@@ -140,3 +140,4 @@ body {
 </div>
 </body>
 </html>
+
